--- a/style.css
+++ b/style.css
@@ -104,3 +104,22 @@ h2 {
     text-align: center;
     margin: 20px 200px 20px 200px;
 }
+
+#footer {
+    margin-top: 50px;
+    text-align: center;
+    background-color: rgb(58, 53, 66);
+    width: 100%;
+    height: 250px;
+}
+
+
+#each {
+
+    color: white;
+}
+
+#footcolor {
+
+    color: rgb(235, 113, 133);
+}
