--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
 .link {
     text-decoration: none;
     font-weight: 700;
-    background-image: linear-gradient(to top, rgb(255, 5, 5), rgb(245, 195, 195));
+    background-color: rgb(255, 0, 0);
     color: rgb(248, 242, 242);
     padding: 10px 30px;
     border-radius: 10px;
@@ -97,7 +97,7 @@ h2 {
     margin: 20px 10px 300px 400px;
     text-decoration: none;
     font-weight: 700;
-    background-image: linear-gradient(to top, rgb(255, 5, 5), rgb(245, 195, 195));
+    background-color: rgb(255, 1, 1);
     color: rgb(248, 242, 242);
     padding: 10px 30px;
     border-radius: 4px;
@@ -108,7 +108,7 @@ h2 {
 
     text-decoration: none;
     font-weight: 700;
-    background-image: linear-gradient(to top, rgb(255, 5, 5), rgb(245, 195, 195));
+    background-color: rgb(255, 5, 5);
     color: rgb(248, 242, 242);
     padding: 10px 30px;
     border-radius: 4px;
@@ -148,7 +148,7 @@ h2 {
     font-size: 15px;
     color: white;
     padding: 10px;
-    background-color: rgb(243, 8, 8);
+    background-color: rgb(255, 10, 10);
 }
 
 .FES {
@@ -157,8 +157,7 @@ h2 {
 
 #food {
     margin: 5%;
-    height: 300px;
-    width: 500px;
+    padding: 25px 25px;
     background-color: rgb(193, 219, 230);
 }
 
@@ -172,8 +171,7 @@ h2 {
 
 #shalter {
     margin: 5%;
-    height: 300px;
-    width: 500px;
+    padding: 25px 35px;
     background-color: rgb(230, 193, 213);
 }
 
@@ -187,8 +185,7 @@ h2 {
 
 #education {
     margin: 5%;
-    height: 300px;
-    width: 550px;
+    padding: 25px 25px;
     background-color: rgb(193, 230, 199);
 }
 
