--- a/style.css
+++ b/style.css
@@ -85,9 +85,10 @@ h2 {
 }
 
 #other {
+    text-align: center;
     font-size: 20px;
-    margin-left: 400px;
-    border-bottom: 0;
+    margin-left: 70px;
+    border-bottom: 1px solid black;
     border-top: 0;
     border-left: 0;
     border-right: 0;
